http-proxy-keda/k8s/nginx-http/externalService.yaml
apiVersion: v1
kind: Service
metadata:
  name: keda-add-ons
  namespace: default
spec:
  type: ExternalName
  externalName: keda-add-ons-http-interceptor-proxy.keda.svc.cluster.local
