http-proxy-keda/k8s/nginx-http/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: nginx
 namespace: keda # <-- namespace where the Add-On is installed
spec:
 ingressClassName: nginx
 rules:
 - host: myhost.com
   http:
     paths:
     - path: /
       pathType: Prefix
       backend:
         service:
           name: keda-add-ons-http-interceptor-proxy # <-- interceptor service
           port:
             number: 8080
